--- a/framework/less/mixins.less
+++ b/framework/less/mixins.less
@@ -24,12 +24,14 @@
     list-style-type: none;
   }
 }
-.clear-area() {
+.clear-area(@margin:true) {
   background: none;
   border: none;
   box-shadow: none;
-  margin: 0;
   padding: 0;
+  & when not (@margin = false) {
+    margin: 0;
+  }
 }
 
 
