--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -208,6 +208,9 @@ a {
 }
 p {
     margin: 0 0 @margin 0;
+    &:last-child {
+      margin-bottom: 0;
+    }
 }
 blockquote {
     &:extend([class*="atk-text"][class*="-size--l"]);
