--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -57,7 +57,7 @@ h6, small { .text-size--s; }
     &[class*="-semibold"] {
       font-weight: 600;
     }
-    &[class*="-normal"] {
+    &[class*="-regular"] {
       font-weight: 400;
     }
     &[class*="-light"] {
@@ -71,6 +71,9 @@ h6, small { .text-size--s; }
     }
     &[class*="-caps"] {
       .text-caps;
+    }
+    &[class*="-wrap"] {
+      white-space: normal;
     }
     &[class*="-nowrap"] {
       white-space: nowrap;
