--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -8,6 +8,7 @@ html, body, .atk-layout  {
 .atk-layout {
 	.box-sizing;
 	display: table;
+  table-layout: fixed;
 	width: 100%;
 	>.atk-layoutRow, >.atk-layoutColumn, .atk-layoutRow>.atk-layoutColumn {
 		height: 0.1%;
