--- a/playground/css/playground-theme.css
+++ b/playground/css/playground-theme.css
@@ -398,6 +398,7 @@ body,
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   display: table;
+  table-layout: fixed;
   width: 100%;
 }
 .atk-layout > .atk-layoutRow,
