--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -260,7 +260,7 @@
     }
 }
 [class*="atk-border"][class*="--thick"] {
-  &[class*="atk-popover"] .atk-popover-arrow:before {
+  &[class*="atk-popover"] .atk-popoverArrow:before {
     border-width: 2px !important;
   }
   hr& {
