--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -217,11 +217,13 @@
     &, &[class*="atk-popover-top"] {
         .atk-popoverArrow {
             bottom: 100%;
+            margin-bottom: -1px;
         }
     }
     &[class*="atk-popover-bottom"] {
         .atk-popoverArrow {
             top: 100%;
+            margin-top: -1px;
         }
     }
     &[class*="atk-popover-left"] .atk-popoverArrow {
